# utility-scripts-collection

./: .flake8  .isort.cfg  .pre-commit-config.yaml  .pylintrc  COMMIT_MSG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SHELL_STYLE_CHANGES.md  check_http500.py  check_readonlymount.py  config.sample.yaml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py  setup.py
.github/: dependabot.yml  settings.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: auto-assign.yml  auto_assign_project.yml  ci.yml  release.yml  semver.yml
DNSScript/: README  README.md  dns_manager.py  main2.py
NagiosPlugins/check_#1/: main.py
NagiosPlugins/check_#2/: main.py
NagiosPlugins/check_counters_db/: check_counters_db.py  check_counters_db.sh
NagiosPlugins/check_dig/: check_dig.py
NagiosPlugins/check_etl/: etl.py
NagiosPlugins/check_hadoop/: hadoop.py
NagiosPlugins/check_http500/: check_http500.py  check_http500_clean.py
NagiosPlugins/check_jobs/: check_jobs.py
NagiosPlugins/check_monghealth/: check_monghealth.py
NagiosPlugins/check_procs/: check_procs.py  check_procs_simple.py  readme.txt
NagiosPlugins/check_ro_mounts/: check_mounts.py
NagiosPlugins/check_scribe/: check_scribe.sh
NagiosPlugins/check_statusthroughweb/: check_statusthroughweb.py
NagiosPlugins/membase_stats/: membase_stats.py
NagiosPlugins/membase_stats/original/: membase_stats.py
NagiosPlugins/zenoss_check_#4/: zenoss_check4.py
RSS-IRC-Daemon/: algorithm.txt  config.py  datastore.db  datastore.db.clean  db_layer.py  ircbot.py  main.py  rss_parser.py  webpanel.py
RSS-IRC-Daemon/old-single-channel/: config.py  doc_feedstructure.txt  main.py  mod_irc.py  rss_mod.py
RSS-IRC-Daemon/templates/: root.html
Standalone_Scripts/SimpleSSH_for_Zenoss_Instance/: sshcli.py
Standalone_Scripts/ZenOSS_AddHosts/: add_hosts.sh  hosts.txt  input.txt  zenoss_api.sh
Standalone_Scripts/ZenOSS_AddHosts/bash_api_docs/: list_servers.sh  pprint.sh  zenoss_api.sh
Standalone_Scripts/ZenOSS_stats_to_gDocs/: gdocstest.py  main.py  report.html
Standalone_Scripts/ZenossToZenossDeviceSync/: destination_inst.py  production_state.py  synchronize.py
Standalone_Scripts/ZenossToZenossDeviceSync/TwoStepsImplementation/: source_inst.py  step1_export.py  step2_import.py
Standalone_Scripts/ZenossZenossDeviceDifference/: diff.py
Standalone_Scripts/inteface_speed/: interfaces_speed.sh
Standalone_Scripts/softlayer_iphostloc_puller/: README.txt  softlayer_pull.py  storage.sqlite3db_src_from_step1  zenjsonclient.py  zenoss_devices.py  zenoss_locations.py  zenoss_resetip.py
Standalone_Scripts/softlayer_iphostloc_puller/old_src/: softlayer.py  softlayer_puller_with_zeninjector.py  zenjsonclient.py  zenoss_injector.py
Standalone_Scripts/softlayer_iphostloc_puller/txt_output/: largeout.txt  output.txt
Standalone_Scripts/softlayer_iphostloc_puller/unused_source/: demodict.py  devlist_fromZenDump.py  zenoss_getDevices.sh  zenoss_pagination_test.py
WhoisScript/: input.txt  main.py
ZenOSS_Dashboard/dashboard/: README  dashboard.db  zenjsonclient.py  zenoss_puller.py
ZenOSS_Dashboard/dashboard/dashboard/: settings.py  urls.py
ZenOSS_Dashboard/dashboard/main/: admin.py  models.py  views.py
ZenOSS_Dashboard/dashboard/templates/: device_details.html  device_list.html  device_template_details.html
src/opsforge/: __init__.py  cli.py
src/opsforge/common/: __init__.py  config.py  exceptions.py  logging.py
src/opsforge/filesystem/: __init__.py  readonly.py
src/opsforge/http/: __init__.py  http500.py
src/utility_scripts/: __init__.py  cli.py
src/utility_scripts/common/: __init__.py  config.py  exceptions.py  logging.py
src/utility_scripts/dns/: __init__.py  manager.py
src/utility_scripts/filesystem/: __init__.py  readonly.py
src/utility_scripts/http/: __init__.py  http500.py
src/utility_scripts/monitoring/: __init__.py
src/utility_scripts/softlayer/: __init__.py
src/utility_scripts/zenoss/: __init__.py
tests/: __init__.py  test_check_http500.py  test_dns_manager.py  test_whois_script.py
tests/unit/: __init__.py
tests/unit/http/: __init__.py  test_http500.py
zenpacks/ZenPacks.steelhouselabs.check_dig/: setup.py
zenpacks/ZenPacks.steelhouselabs.check_dig/ZenPacks/steelhouselabs/check_dig/objects/: objects.xml
zenpacks/ZenPacks.steelhouselabs.check_dig/ZenPacks/steelhouselabs/check_dig/parsers/: check_dig.py
zenpacks/ZenPacks.steelhouselabs.ro_mounts/: setup.py
zenpacks/ZenPacks.steelhouselabs.ro_mounts/ZenPacks/steelhouselabs/ro_mounts/objects/: objects.xml
zenpacks/ZenPacks.steelhouselabs.ro_mounts/ZenPacks/steelhouselabs/ro_mounts/parsers/: mountsStat.py
